@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>0002</version>
+  <version>0003</version>
 </metadata>
