@@ -4,7 +4,8 @@ Changelog
 1.1.21 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Cleanup registry with profile
+  [gotcha]
 
 
 1.1.20 (2018-01-23)
